// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PieGraphRenderer Tests Base Rendering 1`] = `<svg />`;

exports[`PieGraphRenderer Tests With Data and Updates 1`] = `
<svg>
  <g
    id="pieChart0"
    style="transform: translate(0px, 150px) rotate(0);"
  >
    <g
      class="slices"
    >
      <path
        class="slice"
        d="M1.8369701987210297e-14,-300A300,300,0,0,1,259.8076211353316,-150L0,0Z"
        style="fill: #1f77b4;"
      />
      <path
        class="slice"
        d="M259.8076211353316,-150A300,300,0,0,1,1.8369701987210297e-14,300L0,0Z"
        style="fill: #ff7f0e;"
      />
      <path
        class="slice"
        d="M1.8369701987210297e-14,300A300,300,0,1,1,-5.510910596163089e-14,-300L0,0Z"
        style="fill: #2ca02c;"
      />
    </g>
    <g
      class="labels"
    >
      <text
        dy=".35em"
        fill="currentColor"
        text-anchor="start"
        transform="translate(330,-292.2835737772481)"
      >
        1.00
      </text>
      <text
        dy=".35em"
        fill="currentColor"
        text-anchor="start"
        transform="translate(330,168.74999999999994)"
      >
        2.00
      </text>
      <text
        dy=".35em"
        fill="currentColor"
        text-anchor="end"
        transform="translate(-330,4.133182947122317e-14)"
      >
        3.00
      </text>
    </g>
    <g
      class="lines"
    >
      <polyline
        points="74.99999999999999,-129.9038105676658,168.74999999999997,-292.2835737772481,313.5,-292.2835737772481"
      />
      <polyline
        points="129.9038105676658,74.99999999999997,292.2835737772481,168.74999999999994,313.5,168.74999999999994"
      />
      <polyline
        points="-150,1.8369701987210297e-14,-337.5,4.133182947122317e-14,-313.5,4.133182947122317e-14"
      />
    </g>
  </g>
</svg>
`;

exports[`PieGraphRenderer Tests With Data and Updates 2`] = `
<svg>
  <g
    id="pieChart0"
    style="transform: translate(0px, 150px) rotate(0);"
  >
    <g
      class="slices"
    >
      <path
        class="slice"
        d="M1.8369701987210297e-14,-300A300,300,0,0,1,259.8076211353316,-150L0,0Z"
        style="fill: #1f77b4;"
      />
      <path
        class="slice"
        d="M259.8076211353316,-150A300,300,0,0,1,1.8369701987210297e-14,300L0,0Z"
        style="fill: #ff7f0e;"
      />
      <path
        class="slice"
        d="M1.8369701987210297e-14,300A300,300,0,1,1,-5.510910596163089e-14,-300L0,0Z"
        style="fill: #2ca02c;"
      />
    </g>
    <g
      class="labels"
    >
      <text
        dy=".35em"
        fill="currentColor"
        text-anchor="start"
        transform="translate(330,-292.2835737772481)"
      >
        1.00
      </text>
      <text
        dy=".35em"
        fill="currentColor"
        text-anchor="start"
        transform="translate(330,168.74999999999994)"
      >
        2.00
      </text>
      <text
        dy=".35em"
        fill="currentColor"
        text-anchor="end"
        transform="translate(-330,4.133182947122317e-14)"
      >
        3.00
      </text>
    </g>
    <g
      class="lines"
    >
      <polyline
        points="74.99999999999999,-129.9038105676658,168.74999999999997,-292.2835737772481,313.5,-292.2835737772481"
      />
      <polyline
        points="155,0,292.2835737772481,168.74999999999994,313.5,168.74999999999994"
      />
      <polyline
        points="155,0,-337.5,4.133182947122317e-14,-313.5,4.133182947122317e-14"
      />
    </g>
  </g>
</svg>
`;
